Revision history for Compression-Util

0.12    2024-??-??

        [ADDITIONS]

        - Added the `lz4_decompress()` function.

        [IMPROVEMENTS]

        - Slightly better performance in `mtf_encode()`.
        - Replaced all "die" statements, with Carp::confess(), for better debugging.

0.11    2024-08-22

        [ADDITIONS]

        - Added the `crc32()` function.
        - Added the `int2bytes()` and `int2bytes_lsb()` functions.
        - Added the `bzip2_compress()` and `bzip2_decompress()` functions.
        - Added the `gzip_compress()` and `gzip_decompress()` functions.
        - Added the `encode_alphabet_256()` and `decode_alphabet_256()` functions.

        [IMPROVEMENTS]

        - Minor documentation improvements.
        - Slightly more efficient encoding of the alphabet, in function `encode_alphabet()`.

        [CHANGES]

        - Changed the default value of `$Compression::Util::LZ_MAX_LEN` from 258 to 32768. For some inputs, this results in better compression at no additional costs.

0.10    2024-08-07

        [ADDITIONS]

        - Added the `mrl_compress()` and `mrl_decompress()` functions, for compressing/decompressing strings.
        - Added the `bytes2int()` and `bytes2int_lsb()` functions.

        [CHANGES]

        - Changed the order of values returned by `lz77_encode()`.
        - Changed the order of arguments accepted by `lz77_decode()`.

        [FIXES]

        - Fixed an issue in `lzb_decompress($fh)`, when there is more data after the LZB block.

0.09    2024-06-26

        - Generalized `make_deflate_tables()` to generate tables for arbitrarily large distances and match lengths.
        - Generalized `deflate_encode()` to encode arbitrarily large distances and arbitrarily large match lengths.
        - Better compression ratio when `$LZ_MAX_DIST` is set to a small value.
        - Minor documentation and performance improvements.

0.08    2024-06-03

        [ADDITIONS]
