@@ -58,6 +58,7 @@ t/bzip2.t
 t/fast_lzss.t
 t/gzip.t
 t/gzip_fast.t
+t/lz4.t
 t/lz77.t
 t/lz77_abc_encode.t
 t/lz77_adaptive_arithmetic.t
