@@ -5,7 +5,7 @@ use Test::More;
 use Compression::Util qw(:all);
 use List::Util        qw(shuffle);
 
-plan tests => 790;
+plan tests => 820;
 
 ##################################
 
@@ -73,11 +73,16 @@ foreach my $str (
   ) {
     test_array(string2symbols($str));
 
-    is(bzip2_decompress(bzip2_compress($str)),                                           $str);
-    is(gzip_decompress(gzip_compress($str)),                                             $str);
-    is(gzip_decompress(gzip_compress($str, \&lzss_encode_fast)),                         $str);
-    is(lzb_decompress(lzb_compress($str)),                                               $str);
-    is(lzb_decompress(lzb_compress($str, \&lzss_encode_fast)),                           $str);
+    is(bzip2_decompress(bzip2_compress($str)),                   $str);
+    is(gzip_decompress(gzip_compress($str)),                     $str);
+    is(gzip_decompress(gzip_compress($str, \&lzss_encode_fast)), $str);
+
+    is(lzb_decompress(lzb_compress($str)),                     $str);
+    is(lzb_decompress(lzb_compress($str, \&lzss_encode_fast)), $str);
+
+    is(lz4_decompress(lz4_compress($str)),                     $str);
+    is(lz4_decompress(lz4_compress($str, \&lzss_encode_fast)), $str);
+
     is(lz77_decompress(lz77_compress($str)),                                             $str);
     is(lzss_decompress(lzss_compress($str)),                                             $str);
     is(lzss_decompress(lzss_compress($str, \&create_huffman_entry, \&lzss_encode_fast)), $str);
@@ -94,6 +99,16 @@ foreach my $str (
 is(bzip2_decompress(bzip2_compress('')),                   '');
 is(gzip_decompress(gzip_compress('')),                     '');
 is(gzip_decompress(gzip_compress('', \&lzss_encode_fast)), '');
+
+is(lzb_decompress(lzb_compress('')),                      '');
+is(lzb_decompress(lzb_compress('', \&lzss_encode_fast)),  '');
+is(lzb_decompress(lzb_compress('a')),                     'a');
+is(lzb_decompress(lzb_compress('a', \&lzss_encode_fast)), 'a');
+
+is(lz4_decompress(lz4_compress('')),                      '');
+is(lz4_decompress(lz4_compress('', \&lzss_encode_fast)),  '');
+is(lz4_decompress(lz4_compress('a')),                     'a');
+is(lz4_decompress(lz4_compress('a', \&lzss_encode_fast)), 'a');
 
 is(bwt_decompress(bwt_compress('a')),                                               'a');
 is(lzss_decompress(lzss_compress('a')),                                             'a');
@@ -171,6 +186,9 @@ is_deeply(lzss_decompress_symbolic(lzss_compress_symbolic([])),  []);
 
     is(lzb_decompress(lzb_compress($str)),                     $str);
     is(lzb_decompress(lzb_compress($str, \&lzss_encode_fast)), $str);
+
+    is(lz4_decompress(lz4_compress($str)),                     $str);
+    is(lz4_decompress(lz4_compress($str, \&lzss_encode_fast)), $str);
 
     is(lz77_decompress(lz77_compress($str)), $str);
     is(lz77_decompress(lz77_compress($str, \&create_ac_entry),          \&decode_ac_entry),          $str);
@@ -538,6 +556,8 @@ is(
     is(lzss_decompress(lzss_compress($data, \&create_huffman_entry, \&lzss_encode_fast)), $data);
     is(lzb_decompress(lzb_compress($data)),                                               $data);
     is(lzb_decompress(lzb_compress($data, \&lzss_encode_fast)),                           $data);
+    is(lz4_decompress(lz4_compress($data)),                                               $data);
+    is(lz4_decompress(lz4_compress($data, \&lzss_encode_fast)),                           $data);
     is(bwt_decompress(bwt_compress($data)),                                               $data);
     is(mrl_decompress(mrl_compress($data)),                                               $data);
     is(lz77_decompress(lz77_compress($data)),                                             $data);
